-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 5.1.0, 5.0.0-rc2
-
Component/s: Sharding
-
Fully Compatible
-
ALL
-
v5.0
-
Sharding EMEA 2021-06-28
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Include CommandNotFound in the list of errors retried by DDL coordinators in order to not remove coordinator documents in case the user mistakenly replaced the binaries in the wrong order.
- related to
-
SERVER-134115 Sharding DDL coordinators should fail early on CommandNotFound
-
- In Progress
-